# house-price-investigation

./: .gitignore  README.md  pyproject.toml
Output/: train_manipulated.xlsx
Output/Model_in_production/: 3.ML_in_production.py  ML_in_production.py  Selected_features.xlsx  xgb_model.joblib
Programs/: 1.Data Manipulation.ipynb  2.EDA & Modeling.ipynb  Data_Manipulation.ipynb  Manipulation EDA & Modeling.ipynb  kaggle_data_download.py
